<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="295dp"
                    android:layout_height="match_parent"
                    android:text="@string/titulo"
                    android:textSize="16sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_o" />

                <RadioGroup
                    android:id="@+id/aogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checkedButton="@+id/ao2018"
                    android:gravity="center"
                    android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/ao2016"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="a_oSelect"
                            android:text="@string/first" />

                        <RadioButton
                            android:id="@+id/ao2017"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:onClick="a_oSelect"
                            android:text="@string/second" />

                        <RadioButton
                            android:id="@+id/ao2018"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="a_oSelect"
                            android:text="@string/third" />

                </RadioGroup>
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <!--com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupA_o"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.chip.ChipGroup-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operadores" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupOperadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <!--TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kpi" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupKpi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.chip.ChipGroup-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:entries="@array/ordenes" />

                <ImageButton
                    android:id="@+id/btn_buscar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@android:color/transparent"
                    app:srcCompat="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


</LinearLayout>